Correcting command for making neard.service

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -166,7 +166,7 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
 
         [Service]
         Type=simple
-        User=<USER>
+        User=$USER
         #Group=near
         WorkingDirectory=/root/.near
         ExecStart=/root/nearcore/target/release/neard run
@@ -185,9 +185,14 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
 8. Aktifkan Service
 
     ```bash
-    sudo systemctl daemon-reload
     sudo systemctl enable neard
-    sudo systemctl restart neard
+    sudo systemctl start neard
+    ```
+    
+    Jika kamu mengalami masalah pada `neard.service` kalian bisa lakukan perintah berikut :
+    
+    ```
+    sudo systemctl reload neard
     ```
 
 9. Cek Log
