Add Useful Command

--- a/stakewars/task/001.md
+++ b/stakewars/task/001.md
@@ -61,3 +61,57 @@ Pada bagian ini kalian terlebih dahulu install `NEAR-CLI` untuk menjalankan vali
     ![Screenshot_6](https://user-images.githubusercontent.com/35837931/180378247-b50a5797-01f2-4b20-9d7b-af4811a1b7c0.png)
 
     
+## Useful Command
+
+- Cek List Proposals
+    
+    Pada bagian ini kalian bisa melihat list proposal apakah diterima atau ditolak (kalian bisa cek nanti setelah membuat validator).
+    
+    - Cek semua proposals
+    
+        ```bash
+        near proposals
+        ```
+        
+    - Cek spesific proposals
+
+        Ganti `xx` dengan nama wallet kalian (contoh : tester01)
+
+        ```bash
+        near proposals | grep xx.factory.shardnet.near
+        ```
+        
+- Cek Validators Aktif
+
+    Pada bagian ini kalian bisa melihat list validators yang sedang aktif (Kalian bisa cek ini saat validator kalian sudah status aktif).
+    
+    - Cek semua validators aktif
+    
+        ```bash
+        near validators current
+        ```
+        
+    - Cek spesific validators aktif
+
+        Ganti `xx` dengan nama wallet kalian (contoh : tester01)
+
+        ```bash
+        near validators current | grep xx.factory.shardnet.near
+        ```
+- Cek Validators Next
+
+    Pada bagian ini kalian bisa melihat validators yang telah diterima proposalnya dan akan menjadi aktif pada epoch selanjutnya (Jika proposal sudah diterima, maka akan muncul dibagian ini nanti setelah epoch sebelumnya selesai).
+    
+    - Cek semua validators next
+    
+        ```bash
+        near validators next
+        ```
+        
+    - Cek spesific validators next
+
+        Ganti `xx` dengan nama wallet kalian (contoh : tester01)
+
+        ```bash
+        near validators next | grep xx.factory.shardnet.near
+        ```
