Add more details

--- a/stakewars/task/006.md
+++ b/stakewars/task/006.md
@@ -41,14 +41,19 @@ Pada bagian ini kalian akan membuat transaksi otomatis untuk melakukan ping pada
     ```bash
     crontab -e
     ```
-    
-5. Masukkan kode dibawah ini
+
+5. Lalu pilih nomor 1 untuk mengedit file dengan `nano`
+
+
+6. Masukkan kode dibawah ini
 
     ```bash
     */5 * * * * sh $HOME/scripts/ping.sh
     ```
-
-6. Cek Log
+    
+    Lalu tekan `CTRL + O` dan `CTRL + X`.
+    
+7. Cek Log
   
     ```bash
     cat $HOME/logs/all.log
