--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -168,8 +168,8 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
         Type=simple
         User=$USER
         #Group=near
-        WorkingDirectory=/root/.near
-        ExecStart=/root/nearcore/target/release/neard run
+        WorkingDirectory=$HOME/.near
+        ExecStart=$HOME/nearcore/target/release/neard run
         Restart=on-failure
         RestartSec=30
         KillSignal=SIGINT
@@ -185,6 +185,7 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
 8. Aktifkan Service
 
     ```bash
+    sudo systemctl daemon-reload
     sudo systemctl enable neard
     sudo systemctl start neard
     ```
