--- a/stakewars/task/006.md
+++ b/stakewars/task/006.md
@@ -48,7 +48,7 @@ Pada bagian ini kalian akan membuat transaksi otomatis untuk melakukan ping pada
 6. Masukkan kode dibawah ini
 
     ```bash
-    */5 * * * * sh $HOME/scripts/ping.sh
+    */5 * * * * sh $HOME/nearcore/scripts/ping.sh
     ```
     
     Lalu tekan `CTRL + O` dan `CTRL + X`.
@@ -56,5 +56,5 @@ Pada bagian ini kalian akan membuat transaksi otomatis untuk melakukan ping pada
 7. Cek Log
   
     ```bash
-    cat $HOME/logs/all.log
+    cat $HOME/nearcore/logs/all.log
     ```
