Update Link for Wallet and Explorer

--- a/stakewars/task/001.md
+++ b/stakewars/task/001.md
@@ -115,3 +115,8 @@ Pada bagian ini kalian terlebih dahulu install `NEAR-CLI` untuk menjalankan vali
         ```bash
         near validators next | grep xx.factory.shardnet.near
         ```
+## Useful links
+
+Wallet: https://wallet.shardnet.near.org/
+
+Explorer: https://explorer.shardnet.near.org/ 
