Update Link for Wallet and Explorer

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -284,3 +284,10 @@ Pada bagian ini kalian harus memasukkan sharnet wallet kalian untuk menjalankan 
     ```
     
     Setelah di ubah, kemudian tekan `CTRL + O` dan `CTRL + X`
+    
+
+## Useful links
+
+Wallet: https://wallet.shardnet.near.org/
+
+Explorer: https://explorer.shardnet.near.org/ 
