--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -28,48 +28,50 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
 
 ## Useful Command
 
-##### Deposit and Stake NEAR
+Jangan lupa untuk ganti `xx` dengan nama wallet kalian (contoh : tester01) dan `jumlah` ganti dengan angka yang akan kalian input (contoh : `100` atau untuk unstake `100 yoctoNEAR`).
+
+##### Deposit dan Stake NEAR
 
 Command:
 ```
-near call <staking_pool_id> deposit_and_stake --amount <amount> --accountId <accountId> --gas=300000000000000
+near call xx.factory.shardnet.near deposit_and_stake --amount jumlah --accountId xx.shardnet.near --gas=300000000000000
 ```
 ##### Unstake NEAR
-Amount in yoctoNEAR.
+Jumlah dalam yoctoNEAR.
 
-Run the following command to unstake:
+Jalankan command berikut untuk unstake:
 ```
-near call <staking_pool_id> unstake '{"amount": "<amount yoctoNEAR>"}' --accountId <accountId> --gas=300000000000000
+near call xx.factory.shardnet.near unstake '{"amount": "jumlah yoctoNEAR"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
-To unstake all you can run this one:
+Untuk unstake semua NEAR jalankan command ini:
 ```
-near call <staking_pool_id> unstake_all --accountId <accountId> --gas=300000000000000
+near call xx.factory.shardnet.near unstake_all --accountId xx.shardnet.near --gas=300000000000000
 ```
 ##### Withdraw
 
-Unstaking takes 2-3 epochs to complete, after that period you can withdraw in YoctoNEAR from pool.
+Unstaking membutuhkan waktu 2-3 epoch agar bisa di withdraw ke akun wallet kalian. 
 
-Command:
+Command untuk withdraw dengan jumlah tertentu:
 ```
-near call <staking_pool_id> withdraw '{"amount": "<amount yoctoNEAR>"}' --accountId <accountId> --gas=300000000000000
+near call xx.factory.shardnet.near withdraw '{"amount": "jumlah yoctoNEAR"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
-Command to withdraw all:
+Command untuk withdraw semuanya:
 ```
-near call <staking_pool_id> withdraw_all --accountId <accountId> --gas=300000000000000
+near call xx.factory.shardnet.near withdraw_all --accountId xx.shardnet.near --gas=300000000000000
 ```
 
 ##### Ping
-A ping issues a new proposal and updates the staking balances for your delegators. A ping should be issued each epoch to keep reported rewards current.
+
+Ping adalah proposal baru dan update staking balances untuk delegator kalian. Ping harus tetap dilaporkan setiap epoch agar rewards saat ini tetap terupdate dan kalian bisa lakukan Challenges 006 agar bisa melakukan ping selama 5 menit sekali.
 
 Command:
 ```
-near call <staking_pool_id> ping '{}' --accountId <accountId> --gas=300000000000000
+near call xx.factory.shardnet.near ping '{}' --accountId xx.shardnet.near --gas=300000000000000
 ```
-Balances
-Total Balance
-Command:
+Balances Total Balance Command :
+
 ```
-near view <staking_pool_id> get_account_total_balance '{"account_id": "<accountId>"}'
+near view xx.factory.shardnet.near get_account_total_balance '{"account_id": "xx.shardnet.near"}'
 ```
 ##### Staked Balance
 Command:
@@ -99,3 +101,8 @@ Command:
 ```
 near call <staking_pool_id> resume_staking '{}' --accountId <accountId>
 ```
+## Useful links
+
+Wallet: https://wallet.shardnet.near.org/
+
+Explorer: https://explorer.shardnet.near.org/ 
