Add more instructions for Useful Command

--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -76,30 +76,30 @@ near view xx.factory.shardnet.near get_account_total_balance '{"account_id": "xx
 ##### Staked Balance
 Command:
 ```
-near view <staking_pool_id> get_account_staked_balance '{"account_id": "<accountId>"}'
+near view xx.factory.shardnet.near get_account_staked_balance '{"account_id": "xx.shardnet.near"}'
 ```
 ##### Unstaked Balance
 Command:
 ```
-near view <staking_pool_id> get_account_unstaked_balance '{"account_id": "<accountId>"}'
+near view xx.factory.shardnet.near get_account_unstaked_balance '{"account_id": "xx.shardnet.near"}'
 ```
 ##### Available for Withdrawal
-You can only withdraw funds from a contract if they are unlocked.
+Kamu hanya bisa withdraw token NEAR dari kontrak jika sudah unlocked.
 
 Command:
 ```
-near view <staking_pool_id> is_account_unstaked_balance_available '{"account_id": "<accountId>"}'
+near view xx.factory.shardnet.near is_account_unstaked_balance_available '{"account_id": "xx.shardnet.near"}'
 ```
 ##### Pause / Resume Staking
 ###### Pause
 Command:
 ```
-near call <staking_pool_id> pause_staking '{}' --accountId <accountId>
+near call xx.factory.shardnet.near pause_staking '{}' --accountId xx.shardnet.near
 ```
 ###### Resume
 Command:
 ```
-near call <staking_pool_id> resume_staking '{}' --accountId <accountId>
+near call xx.factory.shardnet.near resume_staking '{}' --accountId xx.shardnet.near
 ```
 ## Useful links
 
