Add command for check sync_info

--- a/stakewars/task/004.md
+++ b/stakewars/task/004.md
@@ -3,7 +3,7 @@
 
 ## Membuat Monitoring Node Status `(Challenge 004)`
 
-Pada bagian ini, kalian akan membuat monitoring node status untuk melihat apakah node kalian sedang sudah full sinkron atau tidak.
+Pada bagian ini, kalian akan membuat monitoring node status untuk melihat versi node dan lain sebagainya.
 
 1. Install jq
 
@@ -43,3 +43,11 @@ Pada bagian ini, kalian akan membuat monitoring node status untuk melihat apakah
         ```bash
         curl -s -d '{"jsonrpc": "2.0", "method": "validators", "id": "dontcare", "params": [null]}' -H 'Content-Type: application/json' 127.0.0.1:3030 | jq -c '.result.prev_epoch_kickout[] | select(.account_id | contains ("xx"))' | jq .reason
         ```
+
+3. Cek Sinkronisasi
+
+    Pastikan status `syncing` adalah `false` agar validators kalian tidak tertinggal block. Jika masih `true` maka node kalian masih belum sepenuhnya sinkron.
+
+    ```
+    curl -s http://127.0.0.1:3030/status | jq .sync_info
+    ```
