Add Instruction for Backup Important Files

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -285,6 +285,19 @@ Pada bagian ini kalian harus memasukkan sharnet wallet kalian untuk menjalankan 
     
     Setelah di ubah, kemudian tekan `CTRL + O` dan `CTRL + X`
     
+14. Simpan `node_key.json` dan `validator_key.json` file kamu ke PC kalian agar kedepannya jika VPS kalian mati masih ada backup file yang digunakan ke VPS baru supaya bisa menjalankan kembali validator kalian sebelumnya.
+    
+    - Copy isi dari file `node_key.json` dan simpan kedalam notepad
+    
+        ```bash
+        nano .near/node_key.json
+        ```
+    
+    - Copy isi dari file `validator_key.json` dan simpan kedalam notepad
+
+        ```bash
+        nano .near/validator_key.json
+        ```
 
 ## Useful links
 
