--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -13,7 +13,7 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
     
     `nama_wallet` ganti dengan nama wallet kalian (contoh : tester01).
     
-    `xx.shardnet.near` ganti xx dengan nama wallet kalian (sama seperti diatas) dan accountId juga sama.
+    `xx.shardnet.near` ganti xx dengan nama wallet kalian (sama seperti diatas) dan `accountId` juga sama.
     
     `public_key_kamu` ganti dengan `public_key` wallet kalian (bisa ditemukan di file `validator_key.json` di folder .near).
     
