--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -202,7 +202,7 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
     journalctl -n 100 -f -u neard
     ```
 
-## Mengaktivasi Node sebagai Validator
+## Menghubungkan Wallet ke NEAR-CLI dan Generate Validator Key
 
 Pada bagian ini kalian harus memasukkan sharnet wallet kalian untuk menjalankan validatornya, kalian bisa ikuti caranya dibawah ini.
 
