Add Becoming a Validator

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -298,6 +298,21 @@ Pada bagian ini kalian harus memasukkan sharnet wallet kalian untuk menjalankan 
         ```bash
         nano .near/validator_key.json
         ```
+        
+#### Menjadi Validator
+Untuk menjadi validator dan masuk ke dalam set validator aktif, minimal harus memenuhi kriteria keberhasilan.
+
+* Node harus sudah dalam full sinkron.
+* `validator_key.json` harus ditempatkan yang benar.
+* Kontrak validator harus sama dengan `public_key` di `validator_key.json`
+* `account_id` harus disetel ke contract id staking pool
+* Harus ada delegasi yang cukup untuk memenuhi jumlah seat minimum. Lihat jumlah seat [disini](https://explorer.shardnet.near.org/nodes/validators).
+* Proposal harus sudah diajukan dengan melakukan ping ke contract validator kalian.
+* Setelah Proposal disetujui (accepted) validators  harus menunggu 2-3 epoch to untuk menjadi validator aktif.
+* Once in the validator set the validator must produce great than 90% of assigned blocks
+* Setelah menjadi validator, validator harus menghasilkan lebih dari 90% block yang ditugaskan.
+
+Cek running status dari validator node. Jika `Validator` sudah muncul, maka pool sudah terpilih didalam validators list saat ini.
 
 ## Useful links
 
