--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -308,8 +308,7 @@ Untuk menjadi validator dan masuk ke dalam set validator aktif, minimal harus me
 * `account_id` harus disetel ke contract id staking pool
 * Harus ada delegasi yang cukup untuk memenuhi jumlah seat minimum. Lihat jumlah seat [disini](https://explorer.shardnet.near.org/nodes/validators).
 * Proposal harus sudah diajukan dengan melakukan ping ke contract validator kalian.
-* Setelah Proposal disetujui (accepted) validators  harus menunggu 2-3 epoch to untuk menjadi validator aktif.
-* Once in the validator set the validator must produce great than 90% of assigned blocks
+* Setelah Proposal disetujui (accepted) validators  harus menunggu 2-3 epoch untuk menjadi validator aktif.
 * Setelah menjadi validator, validator harus menghasilkan lebih dari 90% block yang ditugaskan.
 
 Cek running status dari validator node. Jika `Validator` sudah muncul, maka pool sudah terpilih didalam validators list saat ini.
