Add Instruction to Update NPM

--- a/stakewars/task/001.md
+++ b/stakewars/task/001.md
@@ -42,6 +42,12 @@ Pada bagian ini kalian terlebih dahulu install `NEAR-CLI` untuk menjalankan vali
       >8.13.2
     
     ![Screenshot_5](https://user-images.githubusercontent.com/35837931/180377988-d9776540-5790-480e-b791-d93364172571.png)
+    
+    - Update `NPM` ke versi `8.15.0` **(Optional)** :
+
+        ```bash
+        npm install -g npm@8.15.0
+        ```
 
     
 4. Install NEAR-CLI
