Update Instruction for genesis.json

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -120,11 +120,19 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
 
     Lakukan ini agar NEAR Node kalian bekerja dengan lancar dan tidak ada kendala.
     
-    ```bash
-    ./target/release/neard --home ~/.near init --chain-id shardnet --download-genesis
-    ```
+    - Delete old `genesis.json`
+
+        ```bash
+        rm ~/.near/genesis.json
+        ```
+        
+    - Download new `genesis.json`
     
-    ![Screenshot_18](https://user-images.githubusercontent.com/35837931/180379722-f0e34d17-2f46-4d79-a0df-efa1aaac169c.png)
+        ```bash
+        ./target/release/neard --home ~/.near init --chain-id shardnet --download-genesis
+        ```
+        
+        ![Screenshot_18](https://user-images.githubusercontent.com/35837931/180379722-f0e34d17-2f46-4d79-a0df-efa1aaac169c.png)
 
     
 5. Replace `config.json`
