Update Instructions for Create Service

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -161,34 +161,57 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
     Setelah download headers dan download block mencapai 100%, pada bagian ini`EpochId(`11111111111111111111111111111111`)` berubah menjadi tulisan yang berbeda, maka kalian bisa stop terlebih dahulu dengan cara `CTRL + C`.
     
 7. Membuat Service
-    Karena saya menggunakan DigitalOcean, maka usernya otomatis menggunakan directory root.
-
-    ```bash
-    sudo vi /etc/systemd/system/neard.service
-    ```
-    - Kemudian masukkan kode dibawah ini.
+    Karena saya menggunakan DigitalOcean, maka usernya otomatis menggunakan directory root (Pilih salah satu saja `vi` atau `tee`).
     
+    - Menggunakan `vi` :
+
+       ```bash
+       sudo vi /etc/systemd/system/neard.service
+       ```
+       Lalu masukkan kode berikut ini :
+       
         ```bash
-        [Unit]
-        Description=NEARd Daemon Service
-
-        [Service]
-        Type=simple
+        [Unit] 
+        Description=NEARd Daemon Service 
+        [Service] 
+        Type=simple 
         User=$USER
-        #Group=near
+        #Group=near 
         WorkingDirectory=$HOME/.near
-        ExecStart=$HOME/nearcore/target/release/neard run
-        Restart=on-failure
-        RestartSec=30
-        KillSignal=SIGINT
-        TimeoutStopSec=45
-        KillMode=mixed
-
-        [Install]
+        ExecStart=$HOME/nearcore/target/release/neard run 
+        Restart=on-failure 
+        RestartSec=30 
+        KillSignal=SIGINT 
+        TimeoutStopSec=45 
+        KillMode=mixed 
+        [Install] 
         WantedBy=multi-user.target
         ```
-        
-    - Kemudian tekan `ESC` dan ketik `:wq` lalu enter.
+        Kemudian tekan `ESC` dan ketik `:wq` `enter`.
+
+    **Atau**
+
+    - Menggunakan `tee` :
+
+        ```bash
+        sudo tee /etc/systemd/system/neard.service > /dev/null <<EOF 
+        [Unit] 
+        Description=NEARd Daemon Service 
+        [Service] 
+        Type=simple 
+        User=$USER
+        #Group=near 
+        WorkingDirectory=$HOME/.near
+        ExecStart=$HOME/nearcore/target/release/neard run 
+        Restart=on-failure 
+        RestartSec=30 
+        KillSignal=SIGINT 
+        TimeoutStopSec=45 
+        KillMode=mixed 
+        [Install] 
+        WantedBy=multi-user.target 
+        EOF
+        ```
     
 8. Aktifkan Service
 
