Correcting some command

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -311,7 +311,7 @@ Pada bagian ini kalian harus memasukkan sharnet wallet kalian untuk menjalankan 
 13. Kemudian ganti kata `private_key` ke `secret_key` dibagian `validator_key.json` file
 
     ```bash
-    nano .near/validator_key.json
+    nano ~/.near/validator_key.json
     ```
     
     Setelah di ubah, kemudian tekan `CTRL + O` dan `CTRL + X`
@@ -321,13 +321,13 @@ Pada bagian ini kalian harus memasukkan sharnet wallet kalian untuk menjalankan 
     - Copy isi dari file `node_key.json` dan simpan kedalam notepad
     
         ```bash
-        nano .near/node_key.json
+        nano ~/.near/node_key.json
         ```
     
     - Copy isi dari file `validator_key.json` dan simpan kedalam notepad
 
         ```bash
-        nano .near/validator_key.json
+        nano ~/.near/validator_key.json
         ```
         
 #### Menjadi Validator
