Update some command

--- a/stakewars/task/004.md
+++ b/stakewars/task/004.md
@@ -22,7 +22,7 @@ Pada bagian ini, kalian akan membuat monitoring node status untuk melihat versi 
     
     - Cek Delegators dan Stake
 
-        Seperti biasa, ganti xx dengan nama wallet kalian.
+        Seperti biasa, ganti `xx` dengan nama wallet kalian.
 
         ```bash
         near view xx.factory.shardnet.near get_accounts '{"from_index": 0, "limit": 10}' --accountId xx.shardnet.near
@@ -30,18 +30,18 @@ Pada bagian ini, kalian akan membuat monitoring node status untuk melihat versi 
         ```
     - Cek Block Produced
         
-        Ganti xx dengan nama wallet kalian.
+        Ganti `xx` dengan nama wallet kalian.
         
         ```bash
-        curl -s -d '{"jsonrpc": "2.0", "method": "validators", "id": "dontcare", "params": [null]}' -H 'Content-Type: application/json' 127.0.0.1:3030 | jq -c '.result.prev_epoch_kickout[] | select(.account_id | contains ("xx"))' | jq .reason
+        curl -s -d '{"jsonrpc": "2.0", "method": "validators", "id": "dontcare", "params": [null]}' -H 'Content-Type: application/json' 127.0.0.1:3030 | jq -c '.result.prev_epoch_kickout[] | select(.account_id | contains ("xx.factory.shardnet.near"))' | jq .reason
         ```
         
     - Cek Reason Validator Kicked
         
-        Ganti xx dengan nama wallet kalian.
+        Ganti `xx` dengan nama wallet kalian.
         
         ```bash
-        curl -s -d '{"jsonrpc": "2.0", "method": "validators", "id": "dontcare", "params": [null]}' -H 'Content-Type: application/json' 127.0.0.1:3030 | jq -c '.result.prev_epoch_kickout[] | select(.account_id | contains ("xx"))' | jq .reason
+        curl -s -d '{"jsonrpc": "2.0", "method": "validators", "id": "dontcare", "params": [null]}' -H 'Content-Type: application/json' 127.0.0.1:3030 | jq -c '.result.prev_epoch_kickout[] | select(.account_id | contains ("xx.factory.shardnet.near"))' | jq .reason
         ```
 
 3. Cek Sinkronisasi
