--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -37,11 +37,13 @@ Command:
 near call xx.factory.shardnet.near deposit_and_stake --amount jumlah --accountId xx.shardnet.near --gas=300000000000000
 ```
 ##### Unstake NEAR
-Jumlah dalam yoctoNEAR.
+`Jumlah` dalam yoctoNEAR.
+
+1 NEAR = 1000000000000000000000000 yoctoNEAR
 
 Jalankan command berikut untuk unstake:
 ```
-near call xx.factory.shardnet.near unstake '{"amount": "jumlah yoctoNEAR"}' --accountId xx.shardnet.near --gas=300000000000000
+near call xx.factory.shardnet.near unstake '{"amount": "jumlah"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
 Untuk unstake semua NEAR jalankan command ini:
 ```
@@ -53,7 +55,7 @@ Unstaking membutuhkan waktu 2-3 epoch agar bisa di withdraw ke akun wallet kalia
 
 Command untuk withdraw dengan jumlah tertentu:
 ```
-near call xx.factory.shardnet.near withdraw '{"amount": "jumlah yoctoNEAR"}' --accountId xx.shardnet.near --gas=300000000000000
+near call xx.factory.shardnet.near withdraw '{"amount": "jumlah"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
 Command untuk withdraw semuanya:
 ```
