--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -28,7 +28,7 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
 
 ## Useful Command
 
-Jangan lupa untuk ganti `xx` dengan nama wallet kalian (contoh : tester01) dan `jumlah` ganti dengan angka yang akan kalian input (contoh : `100` `NEAR` untuk stake atau untuk unstake `1000000000000000000000000`ini dalam jumlah `yoctoNEAR`).
+Jangan lupa untuk ganti `xx` dengan nama wallet kalian (contoh : tester01) dan `jumlah` ganti dengan angka yang akan kalian input (contoh : `100` dalam bentuk NEAR untuk stake atau untuk unstake `1000000000000000000000000`ini dalam jumlah `yoctoNEAR`).
 
 ##### Deposit dan Stake NEAR
 
@@ -53,7 +53,7 @@ near call xx.factory.shardnet.near unstake_all --accountId xx.shardnet.near --ga
 
 Unstaking membutuhkan waktu 2-3 epoch agar bisa di withdraw ke akun wallet kalian. 
 
-Command untuk withdraw dengan jumlah tertentu:
+Command untuk withdraw dengan jumlah tertentu dalam bentuk `yoctoNEAR`:
 ```
 near call xx.factory.shardnet.near withdraw '{"amount": "jumlah"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
