--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -28,22 +28,25 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
 
 ## Useful Command
 
-Jangan lupa untuk ganti `xx` dengan nama wallet kalian (contoh : tester01) dan `jumlah` ganti dengan angka yang akan kalian input (contoh : `100` dalam bentuk NEAR untuk stake atau untuk unstake `1000000000000000000000000`ini dalam jumlah `yoctoNEAR`).
+Jangan lupa untuk ganti `xx` dengan nama wallet kalian (contoh : tester01) dan `jumlah` ganti dengan angka yang akan kalian input (contoh : `1` dalam bentuk NEAR untuk stake atau untuk unstake `1000000000000000000000000`ini dalam jumlah `yoctoNEAR`).
 
 ##### Deposit dan Stake NEAR
 
+`jumlah_NEAR` dalam bentuk NEAR.
+
 Command:
 ```
-near call xx.factory.shardnet.near deposit_and_stake --amount jumlah --accountId xx.shardnet.near --gas=300000000000000
+near call xx.factory.shardnet.near deposit_and_stake --amount jumlah_NEAR --accountId xx.shardnet.near --gas=300000000000000
 ```
 ##### Unstake NEAR
-`Jumlah` dalam yoctoNEAR.
+
+`jumlah_yoctoNEAR` dalam bentuk yoctoNEAR.
 
 1 NEAR = 1000000000000000000000000 yoctoNEAR
 
 Jalankan command berikut untuk unstake:
 ```
-near call xx.factory.shardnet.near unstake '{"amount": "jumlah"}' --accountId xx.shardnet.near --gas=300000000000000
+near call xx.factory.shardnet.near unstake '{"amount": "jumlah_yoctoNEAR"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
 Untuk unstake semua NEAR jalankan command ini:
 ```
@@ -55,7 +58,7 @@ Unstaking membutuhkan waktu 2-3 epoch agar bisa di withdraw ke akun wallet kalia
 
 Command untuk withdraw dengan jumlah tertentu dalam bentuk `yoctoNEAR`:
 ```
-near call xx.factory.shardnet.near withdraw '{"amount": "jumlah"}' --accountId xx.shardnet.near --gas=300000000000000
+near call xx.factory.shardnet.near withdraw '{"amount": "jumlah_yoctoNEAR"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
 Command untuk withdraw semuanya:
 ```
