Add instruction how to change commission

--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -30,14 +30,24 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
 
 Jangan lupa untuk ganti `xx` dengan nama wallet kalian (contoh : tester01) dan `jumlah` ganti dengan angka yang akan kalian input (contoh : `1` dalam bentuk NEAR untuk stake atau untuk unstake `1000000000000000000000000`ini dalam jumlah `yoctoNEAR`).
 
+##### Mengubah commission
+
+Kalian bisa mengubah commission validator kalian dengan jumlah tertentu, command dibawah ini kalian akan mengubahnya ke 3% atau ubah angka 3 pada bagian `"numerator": 3` sesuai keinginan kalian.
+
+```bash
+near call xx.factory.shardnet.near update_reward_fee_fraction '{"reward_fee_fraction": {"numerator": 3, "denominator": 100}}' --accountId xx.shardnet.near --gas=300000000000000
+```
+
 ##### Deposit dan Stake NEAR
 
 `jumlah_NEAR` dalam bentuk NEAR.
 
 Command:
-```
+
+```bash
 near call xx.factory.shardnet.near deposit_and_stake --amount jumlah_NEAR --accountId xx.shardnet.near --gas=300000000000000
 ```
+
 ##### Unstake NEAR
 
 `jumlah_yoctoNEAR` dalam bentuk yoctoNEAR.
@@ -45,23 +55,30 @@ near call xx.factory.shardnet.near deposit_and_stake --amount jumlah_NEAR --acco
 1 NEAR = 1000000000000000000000000 yoctoNEAR
 
 Jalankan command berikut untuk unstake:
-```
+
+```bash
 near call xx.factory.shardnet.near unstake '{"amount": "jumlah_yoctoNEAR"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
+
 Untuk unstake semua NEAR jalankan command ini:
-```
+
+```bash
 near call xx.factory.shardnet.near unstake_all --accountId xx.shardnet.near --gas=300000000000000
 ```
+
 ##### Withdraw
 
 Unstaking membutuhkan waktu 2-3 epoch agar bisa di withdraw ke akun wallet kalian. 
 
 Command untuk withdraw dengan jumlah tertentu dalam bentuk `yoctoNEAR`:
-```
+
+```bash
 near call xx.factory.shardnet.near withdraw '{"amount": "jumlah_yoctoNEAR"}' --accountId xx.shardnet.near --gas=300000000000000
 ```
+
 Command untuk withdraw semuanya:
-```
+
+```bash
 near call xx.factory.shardnet.near withdraw_all --accountId xx.shardnet.near --gas=300000000000000
 ```
 
@@ -70,42 +87,54 @@ near call xx.factory.shardnet.near withdraw_all --accountId xx.shardnet.near --g
 Ping adalah proposal baru dan update staking balances untuk delegator kalian. Ping harus tetap dilaporkan setiap epoch agar rewards saat ini tetap terupdate dan kalian bisa lakukan Challenges 006 agar bisa melakukan ping selama 5 menit sekali.
 
 Command:
-```
+
+```bash
 near call xx.factory.shardnet.near ping '{}' --accountId xx.shardnet.near --gas=300000000000000
 ```
 Balances Total Balance Command :
 
-```
+```bash
 near view xx.factory.shardnet.near get_account_total_balance '{"account_id": "xx.shardnet.near"}'
 ```
+
 ##### Staked Balance
 Command:
-```
+
+```bash
 near view xx.factory.shardnet.near get_account_staked_balance '{"account_id": "xx.shardnet.near"}'
 ```
+
 ##### Unstaked Balance
 Command:
-```
+
+```bash
 near view xx.factory.shardnet.near get_account_unstaked_balance '{"account_id": "xx.shardnet.near"}'
 ```
+
 ##### Available for Withdrawal
 Kamu hanya bisa withdraw token NEAR dari kontrak jika sudah unlocked.
 
 Command:
-```
+
+```bash
 near view xx.factory.shardnet.near is_account_unstaked_balance_available '{"account_id": "xx.shardnet.near"}'
 ```
+
 ##### Pause / Resume Staking
 ###### Pause
 Command:
-```
+
+```bash
 near call xx.factory.shardnet.near pause_staking '{}' --accountId xx.shardnet.near
 ```
+
 ###### Resume
 Command:
-```
+
+```bash
 near call xx.factory.shardnet.near resume_staking '{}' --accountId xx.shardnet.near
 ```
+
 ## Useful links
 
 Wallet: https://wallet.shardnet.near.org/
