Add some command

--- a/stakewars/task/001.md
+++ b/stakewars/task/001.md
@@ -61,6 +61,11 @@ Pada bagian ini kalian terlebih dahulu install `NEAR-CLI` untuk menjalankan vali
 5. Ubah NEAR Environment ke Shardnet
 
     ```bash
+    export NEAR_ENV=shardnet
+    ```
+
+
+    ```bash
     echo 'export NEAR_ENV=shardnet' >> ~/.bashrc
     ```
     
