--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -133,6 +133,27 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
         ```
         
         ![Screenshot_18](https://user-images.githubusercontent.com/35837931/180379722-f0e34d17-2f46-4d79-a0df-efa1aaac169c.png)
+        
+    - Menggunakan Snapshot `(Optional)`
+        
+        Install `AWS-CLI`
+        
+        ```bash
+        sudo apt-get install awscli -y
+        ```
+        
+        Hapus file `genesis.json`
+        
+        ```bash
+        rm ~/.near/genesis.json
+        ```
+        
+        Buka folder `.near` dan download file `genesis.json`
+        
+        ```bash
+        cd ~/.near
+        wget https://s3-us-west-1.amazonaws.com/build.nearprotocol.com/nearcore-deploy/shardnet/genesis.json
+        ```
 
     
 5. Replace `config.json`
