Add instructions for public_key

--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -15,7 +15,11 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
     
     `xx.shardnet.near` ganti xx dengan nama wallet kalian (sama seperti diatas) dan `accountId` juga sama.
     
-    `public_key_kamu` ganti dengan `public_key` wallet kalian (bisa ditemukan di file `validator_key.json` di folder .near).
+    `public_key_kamu` ganti dengan `public_key` wallet kalian dengan command dibawah ini.
+    
+    ```bash
+    cat ~/.near/validator_key.json | jq .public_key
+    ```
     
     `--amount=30` kalian bisa ubah jumlah stake NEAR kalian dari 30 ke berapapun yang kalian mau, 1 wallet memiliki 500 NEAR tapi lebih baik kalian sisakan NEAR (lebih banyak lebih baik) untuk membayar gas fee nantinya.
 
@@ -24,7 +28,9 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
 
     ![Screenshot_32](https://user-images.githubusercontent.com/35837931/180383828-272a660e-0a1a-4252-a5f4-880e3961e49f.png)
 
-
+3. Cek validators kalian apakah sudah muncul atau tidak di explorer 
+    
+    https://explorer.shardnet.near.org/nodes/validators
 
 ## Useful Command
 
