--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -15,7 +15,7 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
     
     `xx.shardnet.near` ganti xx dengan nama wallet kalian (sama seperti diatas) dan `accountId` juga sama.
     
-    `public_key_kamu` ganti dengan `public_key` wallet kalian dengan command dibawah ini.
+    `public_key_kamu` ganti dengan `public_key` wallet kalian menggunakan command dibawah ini.
     
     ```bash
     cat ~/.near/validator_key.json | jq .public_key
