Update command for genesis Snapshot

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -142,17 +142,11 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
         sudo apt-get install awscli -y
         ```
         
-        Hapus file `genesis.json`
+        Hapus `genesis.json` sebelumnya dan download file `genesis.json`
         
         ```bash
         rm ~/.near/genesis.json
-        ```
-        
-        Buka folder `.near` dan download file `genesis.json`
-        
-        ```bash
-        cd ~/.near
-        wget https://s3-us-west-1.amazonaws.com/build.nearprotocol.com/nearcore-deploy/shardnet/genesis.json
+        wget -O ~/.near/genesis.json https://s3-us-west-1.amazonaws.com/build.nearprotocol.com/nearcore-deploy/shardnet/genesis.json
         ```
 
     
