Add instructions for colorful viewing log

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -247,6 +247,17 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
     ```bash
     journalctl -n 100 -f -u neard
     ```
+    Jika kalian ingin log-nya terlihat berwarna, kalian bisa install `ccze` dengan command dibawah ini.
+    
+    ```bash
+    sudo apt install ccze
+    ```
+    
+    Lalu pakai command dibawah ini untuk melihat log kalian lebih berwarna.
+    
+    ```bash
+    journalctl -n 100 -f -u neard | ccze -A
+    ```
 
 ## Menghubungkan Wallet ke NEAR-CLI dan Generate Validator Key
 
