Add link to challenge 002

--- a/stakewars/task/001.md
+++ b/stakewars/task/001.md
@@ -126,6 +126,11 @@ Pada bagian ini kalian terlebih dahulu install `NEAR-CLI` untuk menjalankan vali
         ```bash
         near validators next | grep xx.factory.shardnet.near
         ```
+        
+## Lanjut ke Challenge 002
+
+[Setup Wallet dan Run Validator](https://github.com/yantodotid/testnet/blob/main/stakewars/task/002.md)
+
 ## Useful links
 
 Wallet: https://wallet.shardnet.near.org/
