Add link to challenge 003

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -370,6 +370,10 @@ Untuk menjadi validator dan masuk ke dalam set validator aktif, minimal harus me
 
 Cek running status dari validator node. Jika `Validator` sudah muncul, maka pool sudah terpilih didalam validators list saat ini.
 
+## Lanjut ke Challenge 003
+
+[Mounting Staking Pool](https://github.com/yantodotid/testnet/blob/main/stakewars/task/003.md)
+
 ## Useful links
 
 Wallet: https://wallet.shardnet.near.org/
