Add link to challenge 004

--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -141,6 +141,10 @@ Command:
 near call xx.factory.shardnet.near resume_staking '{}' --accountId xx.shardnet.near
 ```
 
+## Lanjut ke Challenge 004
+
+[Membuat Monitoring Node Status](https://github.com/yantodotid/testnet/blob/main/stakewars/task/004.md)
+
 ## Useful links
 
 Wallet: https://wallet.shardnet.near.org/
