Add warning for running node

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -163,7 +163,7 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
     
 6. Jalankan Node
 
-    Pada bagian ini kalian harus menunggu download headers ke 100% dan kemudian baru melakukan sinkroninsasi block.
+    Pada bagian ini kalian harus menunggu download headers ke 100% dan kemudian baru melakukan sinkroninsasi block. _Jangan sampai close tab sebelum itu selesai, maka nanti akan terjadi error_. Jadi kalau kalian ingin tutup tab, pastikan stop dulu dengan cara `CTRL + C` agar tidak terjadi error saat menjalankan service nanti.
 
     ```bash
     cd ~/nearcore
