Correct some typo text

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -163,7 +163,7 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
     
 6. Jalankan Node
 
-    Pada bagian ini kalian harus menunggu download headers ke 100% dan kemudian baru melakukan sinkroninsasi block. _Jangan sampai close tab sebelum itu selesai, maka nanti akan terjadi error_. Jadi kalau kalian ingin tutup tab, pastikan stop dulu dengan cara `CTRL + C` agar tidak terjadi error saat menjalankan service nanti.
+    Pada bagian ini kalian harus menunggu download headers ke 100% dan kemudian baru melakukan sinkronisasi block. _Jangan sampai close tab sebelum itu selesai, maka nanti akan terjadi error_. Jadi kalau kalian ingin tutup tab, pastikan stop node dulu dengan cara `CTRL + C` agar tidak terjadi error saat menjalankan service nanti. Karena pada tahap ini hanya menjalankan didalam terminal saja dan belum pada tahap pembuatan service agar berjalan di sistem.
 
     ```bash
     cd ~/nearcore
@@ -261,7 +261,7 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
 
 ## Menghubungkan Wallet ke NEAR-CLI dan Generate Validator Key
 
-Pada bagian ini kalian harus memasukkan sharnet wallet kalian untuk menjalankan validatornya, kalian bisa ikuti caranya dibawah ini.
+Pada bagian ini kalian harus memasukkan shardnet wallet kalian untuk menjalankan validatornya, kalian bisa ikuti caranya dibawah ini.
 
 1. Lakukan autorisasi wallet
 
