Fix some typo text

--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -90,7 +90,7 @@ near call xx.factory.shardnet.near withdraw_all --accountId xx.shardnet.near --g
 
 ##### Ping
 
-Ping adalah proposal baru dan update staking balances untuk delegator kalian. Ping harus tetap dilaporkan setiap epoch agar rewards saat ini tetap terupdate dan kalian bisa lakukan Challenges 006 agar bisa melakukan ping selama 5 menit sekali.
+Ping adalah memperbarui laporan dan update staking balances untuk delegator kalian. Ping harus tetap dilaporkan setiap epoch agar rewards saat ini tetap terupdate dan kalian bisa lakukan Challenges 006 agar bisa melakukan ping selama 5 menit sekali.
 
 Command:
 
