Correcting command for Block Produced

--- a/stakewars/task/004.md
+++ b/stakewars/task/004.md
@@ -33,7 +33,7 @@ Pada bagian ini, kalian akan membuat monitoring node status untuk melihat versi 
         Ganti `xx` dengan nama wallet kalian.
         
         ```bash
-        curl -s -d '{"jsonrpc": "2.0", "method": "validators", "id": "dontcare", "params": [null]}' -H 'Content-Type: application/json' 127.0.0.1:3030 | jq -c '.result.prev_epoch_kickout[] | select(.account_id | contains ("xx.factory.shardnet.near"))' | jq .reason
+        curl -s -d '{"jsonrpc": "2.0", "method": "validators", "id": "dontcare", "params": [null]}' -H 'Content-Type: application/json' 127.0.0.1:3030 | jq  '.result.current_validators[] | select(.account_id | contains ("xx.factory.shardnet.near"))'
         ```
         
     - Cek Reason Validator Kicked
