Add more details about amount

--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -46,7 +46,7 @@ near call xx.factory.shardnet.near update_reward_fee_fraction '{"reward_fee_frac
 
 ##### Deposit dan Stake NEAR
 
-`jumlah_NEAR` dalam bentuk NEAR.
+`jumlah_NEAR` ganti dengan angka saja dalam bentuk NEAR (contoh : `--amount 1`).
 
 Command:
 
@@ -56,9 +56,9 @@ near call xx.factory.shardnet.near deposit_and_stake --amount jumlah_NEAR --acco
 
 ##### Unstake NEAR
 
-`jumlah_yoctoNEAR` dalam bentuk yoctoNEAR.
+`jumlah_yoctoNEAR` ganti dengan angka saja dalam bentuk yoctoNEAR (contoh : `--amount 1000000000000000000000000`).
 
-1 NEAR = 1000000000000000000000000 yoctoNEAR
+>1 NEAR = 1000000000000000000000000 yoctoNEAR
 
 Jalankan command berikut untuk unstake:
 
