Change example for amount

--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -56,7 +56,7 @@ near call xx.factory.shardnet.near deposit_and_stake --amount jumlah_NEAR --acco
 
 ##### Unstake NEAR
 
-`jumlah_yoctoNEAR` ganti dengan angka saja dalam bentuk yoctoNEAR (contoh : `--amount 1000000000000000000000000`).
+`jumlah_yoctoNEAR` ganti dengan angka saja dalam bentuk yoctoNEAR (contoh : `'{"amount": "1000000000000000000000000"}'`).
 
 >1 NEAR = 1000000000000000000000000 yoctoNEAR
 
