Add link for checking seat price

--- a/stakewars/task/003.md
+++ b/stakewars/task/003.md
@@ -21,7 +21,7 @@ Pada tahap ini kalian akan membuat validator yang akan dijalankan pada shardnet.
     cat ~/.near/validator_key.json | jq .public_key
     ```
     
-    `--amount=30` kalian bisa ubah jumlah stake NEAR kalian dari 30 ke berapapun yang kalian mau, 1 wallet memiliki 500 NEAR tapi lebih baik kalian sisakan NEAR (lebih banyak lebih baik) untuk membayar gas fee nantinya.
+    `--amount=30` kalian bisa ubah jumlah stake NEAR kalian dari 30 ke berapapun yang kalian mau (karena 30 adalah minimum stakenya), 1 wallet memiliki 500 NEAR tapi lebih baik kalian sisakan NEAR (lebih banyak lebih baik) untuk membayar gas fee nantinya. Namun untuk memastikan berapa NEAR yang dibutuhkan, kalian bisa cek seat price [disini](https://explorer.shardnet.near.org/nodes/validators).
 
 
 2. Jika sudah selesai, Maka hasilnya seperti Berikut ini
