--- a/stakewars/task/001.md
+++ b/stakewars/task/001.md
@@ -19,7 +19,9 @@ Pada bagian ini kalian terlebih dahulu install `NEAR-CLI` untuk menjalankan vali
     ```bash
     curl -sL https://deb.nodesource.com/setup_18.x | sudo -E bash -  
 
-    sudo apt install build-essential nodejs
+    sudo apt install build-essential 
+    
+    sudo apt install nodejs
 
     PATH="$PATH"
     ```
