--- a/stakewars/task/006.md
+++ b/stakewars/task/006.md
@@ -1,7 +1,7 @@
 <p align="right">Dapatkan 100$ Credit Trial selama 60 hari untuk membeli VPS disini.</p>
 <p align="right"><a href="https://www.digitalocean.com/?refcode=825d86d58739&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%201.svg" alt="DigitalOcean Referral Badge" /></a></p>
 
-# Membuat Ping Otomatis Setiap 5 Menit
+# Membuat Ping Otomatis Setiap 2 Jam
 Pada bagian ini kalian akan membuat transaksi otomatis untuk melakukan ping pada validators kalian.
 
 1. Buat Folder Untuk Log
@@ -48,7 +48,7 @@ Pada bagian ini kalian akan membuat transaksi otomatis untuk melakukan ping pada
 6. Masukkan kode dibawah ini
 
     ```bash
-    */5 * * * * sh $HOME/nearcore/scripts/ping.sh
+    0 */2 * * * sh $HOME/nearcore/scripts/ping.sh
     ```
     
     Lalu tekan `CTRL + O` dan `CTRL + X`.
