Update snapshot command

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -142,11 +142,16 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
         sudo apt-get install awscli -y
         ```
         
-        Hapus `genesis.json` sebelumnya dan download file `genesis.json`
+        Download Snapshot
         
         ```bash
-        rm ~/.near/genesis.json
-        wget -O ~/.near/genesis.json https://s3-us-west-1.amazonaws.com/build.nearprotocol.com/nearcore-deploy/shardnet/genesis.json
+        cd ~/.near
+        # download
+        aws s3 --no-sign-request cp s3://build.openshards.io/stakewars/shardnet/data.tar.gz . 
+        # tar 
+        tar -xzvf data.tar.gz
+        # Hapus data
+        rm -rf data.tar.gz
         ```
 
     
