Update error for reloading service

--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -244,7 +244,7 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
     Jika kamu mengalami masalah pada `neard.service` kalian bisa lakukan perintah berikut :
     
     ```
-    sudo systemctl reload neard
+    sudo systemctl daemon-reload
     ```
 
 9. Cek Log
