--- a/stakewars/task/002.md
+++ b/stakewars/task/002.md
@@ -244,7 +244,9 @@ Clone nearcore repository untuk menjalankan validatornya nanti.
     Jika kamu mengalami masalah pada `neard.service` kalian bisa lakukan perintah berikut :
     
     ```
+    sudo systemctl stop neard
     sudo systemctl daemon-reload
+    sudo systemctl start neard
     ```
 
 9. Cek Log
