Add screenshot and running script

--- a/stakewars/task/006.md
+++ b/stakewars/task/006.md
@@ -53,8 +53,25 @@ Pada bagian ini kalian akan membuat transaksi otomatis untuk melakukan ping pada
     
     Lalu tekan `CTRL + O` dan `CTRL + X`.
     
-7. Cek Log
+7. Cek apakah crontab kalian sudah berjalan atau tidak.
+
+    ```bash
+    crontab -l
+    ```
+    
+    ![Screenshot_65](https://user-images.githubusercontent.com/35837931/181238951-4ead8ebf-50ef-4ac2-8bc0-154b7d8c2ecc.png)
+
+    
+8. Cek Log (kalian harus menunggu 2 jam agar bisa muncul)
   
     ```bash
     cat $HOME/nearcore/logs/all.log
     ```
+    
+    `(Optional)` atau kalian bisa jalankan scriptnya dahulu dengan cara berikut ini.
+    
+    ```bash
+    sh $HOME/nearcore/scripts/ping.sh
+    ```
+    
+    Lalu kalian cek lagi lognya.
